# zed-unicode

./: Cargo.toml  LICENSE  README.md  extension.toml
.github/workflows/: release.yml
src/: lib.rs
unicode-ls/: Cargo.toml
unicode-ls/src/: data.txt  main.rs
