[package]
name = "unicode"
version.workspace = true
edition = "2021"

[workspace]
members = ["unicode-ls"]

[lib]
crate-type = ["cdylib"]

[workspace.package]
version = "0.1.5"

[dependencies]
serde = "1.0.215"
serde_json = "1.0.133"
zed_extension_api = "0.1.0"

[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.25.1"
# CI backends to support
ci = "github"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".zip"
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".zip"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]

[package.metadata.dist]
dist = false
